# minecraft-clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
resources/blocks/data/: air.json  cobblestone.json  dirt.json  grass.json  leaf.json  stone.json  wood_log.json
resources/shaders/: WorldShader.fs  world_shader.fs  world_shader.vs
source/: Application.cpp  Context.cpp  application.h  config.cc  config.h  context.h  main.cc
source/Renderer/: RenderEngine.cpp  RenderEngine.h  WorldRenderer.cpp
source/States/: PlayingState.h
source/entity/: Player.cpp  camera.cc  camera.h  entity.h  player.h
source/input/: Keyboard.cpp  key.h  keyboard.h  mouse.cc  mouse.h
source/math/: vecXZ.cpp  vecXZ.h
source/model/: ChunkMesh.h  model.cc  model.h
source/renderer/: render_engine.cc  render_info.h  world_renderer.cc  world_renderer.h
source/shader/: Shader.cpp  WorldShader.cpp  WorldShader.h  shader.cc  shader.h  world_shader.cc
source/states/: playing_state.cc  state_base.h
source/texture/: Texture.cpp  TextureArray.cpp  TextureArray.h  TextureLoader.h  texture.cc  texture.h  texture_array.cc  texture_array.h  texture_loader.cc
source/utility/: ConfigLoader.cpp  GLDebug.h  Random.cpp  clock.cc  clock.h  config_loader.cpp  config_loader.h  gl_debug.cc  gl_debug.h  random.h
source/world/: World.cpp  WorldConstants.h  world.h
source/world/block/: Block.cpp  BlockData.cpp  BlockDatabase.cpp  BlockDatabase.h  BlockID.h  block.h  block_data.h
source/world/chunk/: Chunk.cpp  ChunkColumn.cpp  ChunkManager.h  MeshBuilder.cpp  MeshBuilder.h  chunk.h  (+2 more)
(+10 files in other folders)
